# adventofcode-2020

./: pyproject.toml  template.py
01/: solve.py
02/: .sample.txt.swp  solve.py
03/: solve.py
04/: solve.py
05/: solve.py
06/: solve.py
07/: solve.py
08/: solve.py
09/: solve.py
10/: solve.py
11/: solve.py
12/: solve.py
13/: solve.py
14/: solve.py
15/: solve.py
16/: solve.py
17/: solve.py
18/: solve.py
19/: solve.py
20/: solve.py
21/: solve.py
22/: solve.py
23/: solve.py
24/: solve.py
25/: solve.py
